fix weird spacing in 2fa setup recovery code section

--- a/orcid-web/src/main/webapp/static/css/orcid.new.css
+++ b/orcid-web/src/main/webapp/static/css/orcid.new.css
@@ -7993,3 +7993,22 @@ ul.twoFactorAuthSetup, ul.twoFactorAuthSetup li {
 	margin: 0;
 	padding: 0;
 }
+
+#recoveryCodes {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+}
+
+#saveRecoverCodesHeading {
+    color: red;
+}
